Describe different types of conditions, declarations, and orders present in Strong Mad Talker, and implement Timwi's recommendations

--- a/Manual/HTML/Strong Mad Talker.html
+++ b/Manual/HTML/Strong Mad Talker.html
@@ -21,7 +21,8 @@
           <h2>On the Subject of Strong Mad Talker</h2>
           <p class="flavour-text">SOLVE THE BOMB!!!! <b>SOLVE THE BOMB!!!!!!!</b></p>
           <p>This module will appear with six words, a Playing/Solving toggle and Strong Mad in the center. When in Playing mode, all buttons are free to be pressed without consequence. When in Solving mode, they must be pressed in a specific order that includes only four of the six buttons. A star will appear along the bottom of the module for each correct word, being cleared if an incorrect word is pressed or the module is changed to Playing mode.</p>
-          <p>One of the words will have only one syllable, and another will be a decoy excluded from the correct sequence. The decoy serves to determine the order in which the other four words should be pressed. The word with one syllable determines the order in which to check each word. Start with the word in the position labeled 1, then in the position labeled 2, and continue until a true condition is reached that declares the decoy. Skip over the one-syllable word during this process. If the word declared as the decoy is the one-syllable word, the decoy is the next word in reading order looping around. If none of the conditions are true, the decoy is the word horizontally adjacent to the one-syllable word.</p>
+          <p>One of the words will have only one syllable, and another will be a decoy excluded from the correct sequence. The decoy serves to determine the order in which the other four words should be pressed. The word with one syllable determines the order in which to check each word, given by Table 1. Use Table 2 to check the condition for the word in the position labeled 1, then in the position labeled 2, and continue until a true condition is reached that declares the decoy. Skip over the one-syllable word during this process. If the word declared as the decoy is the one-syllable word, or if none of the conditions are true, the decoy is the word horizontally adjacent to the one-syllable word. Once the decoy has been found, use its corresponding entry in Table 3 to determine the order to press the remaining words.</p>
+          <h3>Table 1</h3>
           <table style="margin-left:auto;margin-right:auto;text-align:center"><tbody>
             <tr>
               <td><b>JUICE</b>
@@ -62,7 +63,9 @@
           <span class="page-header-doc-title">Keep Talking and Nobody Explodes Mod</span>
           <span class="page-header-section-title">Strong Mad Talker</span>
         </div>
-        <div class="page-content"> <table>
+        <div class="page-content">
+          <h3>Table 2</h3>
+          <table>
           <tbody style="font-size:11.5pt">
             <tr>
               <th>SWEETYCAKES</th>       
@@ -111,6 +114,7 @@
           <span class="page-header-section-title">Strong Mad Talker</span>
         </div>
         <div class="page-content">
+          <h3>Table 3</h3>
           <table>
             <tbody>
               <tr>
