Add ruleseed to MP's code

--- a/Manual/HTML/Main Page.html
+++ b/Manual/HTML/Main Page.html
@@ -20,8 +20,8 @@
         .page-footer::after { content: ' of 8'; }
     </style>
     <script>
-        function setDefaultRules(){
-            setRules(new MonoRandom());
+        function setDefaultRules(rnd){
+            setRules(rnd);
         }
         function setRules(rnd){
             var bubbleMessages=
@@ -74,7 +74,7 @@
             firstTableLetters(3,rnd);
             firstTableLetters(9,rnd);
             firstTableLetters(15,rnd);
-            var colors=["blue","red","green","yellow"];
+            var colors=["blue","green","red","yellow"];
             var conditions=["C1 is","C1 is not","C1 or C2 are","neither C1 nor C2 are"];
             var conditionOpposites=["it isn't","it is","neither are","either is"];
             var C1=rnd.next(0,4);
