Finish appendix in MP's manual

--- a/Manual/HTML/Main Page.html
+++ b/Manual/HTML/Main Page.html
@@ -247,19 +247,19 @@
           <h2>Appendix FHQWHG4D5: Main Page Reference</h2>
           <table><tbody>
             <tr>
-              <td><b>1.</b><br><img src="img/Main Page/1.png" width=209px><br>BG: The Moon<br>HS: Orange Spacesuit</td>
-              <td><b>2.</b><br><img src="img/Main Page/2.png" width=209px><br>BG: The Alps<br>HS: Green Overalls</td>
-              <td><b>3.</b><br><img src="img/Main Page/3.png" width=209px><br>BG: A beach<br>HS: Yellow Shirt w/ Flowers</td>
+              <td><b>1.</b><br><img src="img/Main Page/1.png" width=209px><br>BG: The Moon<br>HS: Orange Spacesuit<br>FX: Green alien bouncing across</td>
+              <td><b>2.</b><br><img src="img/Main Page/2.png" width=209px><br>BG: Mountains<br>HS: Green Overalls<br>FX: Eagle flies</td>
+              <td><b>3.</b><br><img src="img/Main Page/3.png" width=209px><br>BG: Beach<br>HS: Yellow Shirt w/ Flowers<br>FX: Plane flies by w/ banner reading "WEAR A BIKINI!"</td>
             </tr>
             <tr>
-              <td><b>4.</b><br><img src="img/Main Page/4.png" width=209px><br>BG: Bowling alley<br>HS: Red Polo Shirt</td>
-              <td><b>5.</b><br><img src="img/Main Page/5.png" width=209px><br>BG: Waffle House<br>HS: Waffle House Uniform</td>
-              <td><b>6.</b><br><img src="img/Main Page/6.png" width=209px><br>BG: Heaven<br>HS: White Robe and Yellow Halo</td>
+              <td><b>4.</b><br><img src="img/Main Page/4.png" width=209px><br>BG: Bowling Alley<br>HS: Red Polo Shirt<br>FX: Red bowling ball held up and spun</td>
+              <td><b>5.</b><br><img src="img/Main Page/5.png" width=209px><br>BG: Kitchen<br>HS: Waiter Uniform<br>FX: Plate w/ food held up</td>
+              <td><b>6.</b><br><img src="img/Main Page/6.png" width=209px><br>BG: Heaven<br>HS: White Robe, Halo<br>FX: Planes fly</td>
             </tr>
             <tr>
-              <td><b>7.</b><br><img src="img/Main Page/7.png" width=209px><br>BG: Graveyard<br>HS: Pink, brains visible</td>
-              <td><b>8.</b><br><img src="img/Main Page/8.png" width=209px><br>BG: Falling through the sky<br>HS: Upside Down</td>
-              <td><b>9.</b><br><img src="img/Main Page/9.png" width=209px><br>BG: Notebook sketch<br>HS: Drawn outline</td>
+              <td><b>7.</b><br><img src="img/Main Page/7.png" width=209px><br>BG: Graveyard<br>HS: Pink, brains visible<br>FX: Green character pops up from bottom of screen</td>
+              <td><b>8.</b><br><img src="img/Main Page/8.png" width=209px><br>BG: Falling through the sky<br>HS: Upside Down<br>FX: Bird w/ human legs flies across</td>
+              <td><b>9.</b><br><img src="img/Main Page/9.png" width=209px><br>BG: Notebook sketch<br>HS: Drawn outline<br>FX: Paper football flung</td>
             </tr>
             </tbody></table>
         </div>
@@ -274,19 +274,19 @@
           <h3>Appendix FHQWHG4D5: Main Page Reference (continued)</h3>
           <table><tbody>
             <tr>
-              <td><b>10.</b><br><img src="img/Main Page/1.png" width=209px><br>BG: <br>HS: </td>
-              <td><b>11.</b><br><img src="img/Main Page/2.png" width=209px><br>BG: <br>HS: </td>
-              <td><b>12.</b><br><img src="img/Main Page/3.png" width=209px><br>BG: <br>HS: </td>
+              <td><b>10.</b><br><img src="img/Main Page/10.png" width=209px><br>BG: Old-Timey<br>HS: Black and white<br>FX: Black-and-white character w/ mustache dances</td>
+              <td><b>11.</b><br><img src="img/Main Page/11.png" width=209px><br>BG: News Report<br>HS: Suit and Tie<br>FX: Various blocks w/ pictures and text</td>
+              <td><b>12.</b><br><img src="img/Main Page/12.png" width=209px><br>BG: Night, Black Hills<br>HS: Facing away, wearing America-themed top hat<br>FX: Multicolored firework</td>
             </tr>
             <tr>
-              <td><b>13.</b><br><img src="img/Main Page/1.png" width=209px><br>BG: <br>HS: </td>
-              <td><b>14.</b><br><img src="img/Main Page/2.png" width=209px><br>BG: <br>HS: </td>
-              <td><b>15.</b><br><img src="img/Main Page/3.png" width=209px><br>BG: <br>HS: </td>
+              <td><b>13.</b><br><img src="img/Main Page/13.png" width=209px><br>BG: Atari 2600<br>HS: Heavily pixelated<br>FX: Atari dragon chasing pixelated character</td>
+              <td><b>14.</b><br><img src="img/Main Page/14.png" width=209px><br>BG: Shower<br>HS: Shower cap and towel<br>FX: Display steams up, "LEMKE" traced on steam</td>
+              <td><b>15.</b><br><img src="img/Main Page/15.png" width=209px><br>BG: Basic Drawing<br>HS: Poorly-drawn<br>FX: Boat reading "wear a bikini" spins and shrinks</td>
             </tr>
             <tr>
-              <td><b>16.</b><br><img src="img/Main Page/1.png" width=209px><br>BG: <br>HS: </td>
-              <td><b>17.</b><br><img src="img/Main Page/2.png" width=209px><br>BG: <br>HS: </td>
-              <td><b>18.</b><br><img src="img/Main Page/3.png" width=209px><br>BG: <br>HS: </td>
+              <td><b>16.</b><br><img src="img/Main Page/16.png" width=209px><br>BG: Snowy<br>HS: Brown cap and yellow scarf<br>FX: Snow falls</td>
+              <td><b>17.</b><br><img src="img/Main Page/17.png" width=209px><br>BG: Futuristic<br>HS: Anime<br>FX: Red character w/ blue hair runs and frontflips</td>
+              <td><b>18.</b><br><img src="img/Main Page/18.png" width=209px><br>BG: Tiled Ground, Spiked Background<br>HS: Normal<br>FX: Small brown character dashes in, exclaims "Eh! Steve!", and leaves</td>
             </tr>
             </tbody></table>
         </div>
@@ -301,19 +301,19 @@
           <h3>Appendix FHQWHG4D5: Main Page Reference (continued)</h3>
           <table><tbody>
             <tr>
-              <td><b>19.</b><br><img src="img/Main Page/1.png" width=209px><br>BG: <br>HS: </td>
-              <td><b>20.</b><br><img src="img/Main Page/2.png" width=209px><br>BG: <br>HS: </td>
-              <td><b>21.</b><br><img src="img/Main Page/3.png" width=209px><br>BG: <br>HS: </td>
+              <td><b>19.</b><br><img src="img/Main Page/19.png" width=209px><br>BG: The Show<br>HS: Normal w/ microphone<br>FX: Round yellow character wearing nametag reading "downloads" bounces across</td>
+              <td><b>20.</b><br><img src="img/Main Page/20.png" width=209px><br>BG: Very Basic<br>HS: Dotted eyes, yellow shirt w/ duck<br>FX: Pile of grapes appears in background, small yellow character jumps out</td>
+              <td><b>21.</b><br><img src="img/Main Page/21.png" width=209px><br>BG: Vector Video Game<br>HS: Green and blocky w/ lines<br>FX: Red face appears, says "WELL, MY HEAD A SPLODE", and explodes</td>
             </tr>
             <tr>
-              <td><b>22.</b><br><img src="img/Main Page/1.png" width=209px><br>BG: <br>HS: </td>
-              <td><b>23.</b><br><img src="img/Main Page/2.png" width=209px><br>BG: <br>HS: </td>
-              <td><b>24.</b><br><img src="img/Main Page/3.png" width=209px><br>BG: <br>HS: </td>
+              <td><b>22.</b><br><img src="img/Main Page/22.png" width=209px><br>BG: Broken Computer<br>HS: Normal head, old-timey body<br>FX: Multiple popups appear</td>
+              <td><b>23.</b><br><img src="img/Main Page/23.png" width=209px><br>BG: Rear-View<br>HS: Normal, facing away<br>FX: Wooden circle reading "wear a bikini!" floats across, tape plays "I'm the floating head of doom!"</td>
+              <td><b>24.</b><br><img src="img/Main Page/24.png" width=209px><br>BG: Generic 1<br>HS: Blurred shirt (not shown in image)<br>FX: Eyesight chart appears</td>
             </tr>
             <tr>
-              <td><b>25.</b><br><img src="img/Main Page/1.png" width=209px><br>BG: <br>HS: </td>
-              <td><b>26.</b><br><img src="img/Main Page/2.png" width=209px><br>BG: <br>HS: </td>
-              <td><b>27.</b><br><img src="img/Main Page/3.png" width=209px><br>BG: <br>HS: </td>
+              <td><b>25.</b><br><img src="img/Main Page/25.png" width=209px><br>BG: Generic 2<br>HS: Puppet<br>FX: Yellow character walks by holding blue boombox playing music</td>
+              <td><b>26.</b><br><img src="img/Main Page/26.png" width=209px><br>BG: Bright, Spiked<br>HS: Pointy, angry<br>FX: Angry elephant flies by, exclaiming "I'm mad that I'm flying!"</td>
+              <td><b>27.</b><br><img src="img/Main Page/27.png" width=209px><br>BG: Mountains, Cottage<br>HS: Hooded<br>FX: None</td>
             </tr>
             </tbody></table>
         </div>
