--- a/Manual/HTML/Main Page.html
+++ b/Manual/HTML/Main Page.html
@@ -17,7 +17,7 @@
         }
 
         .page-footer::before { content: 'Page '; }
-        .page-footer::after { content: ' of 8'; }
+        .page-footer::after { content: ' of 6'; }
     </style>
     <script>
         function setDefaultRules(rnd){
@@ -75,8 +75,8 @@
             firstTableLetters(9,rnd);
             firstTableLetters(15,rnd);
             var colors=["blue","green","red","yellow"];
-            var conditions=["C1 is","C1 is not","C1 or C2 are","neither C1 nor C2 are"];
-            var conditionOpposites=["it isn't","it is","neither are","either is"];
+            var conditions=["C1 is","C1 is not","C1 and C2 are both","either C1 or C2 are not"];
+            var conditionOpposites=["it isn't","it is","either one is absent","both are"];
             var C1=rnd.next(0,4);
             var C2;
             do{
@@ -89,9 +89,9 @@
                 condText=condText.replace("C2",colors[C2]);
             $("#colorCondition").text(condText);
             $("#colorConditionOpposite").text(conditionOpposites[cond]);
-            var turnConds=["Homestar has the default voice lines","Homestar does not have the default voice lines","any of the buttons' effects are from the same main page as Homestar","any of the buttons' effects are from the same main page as the background"];
+            var turnConds=["Homestar has the default voice lines","Homestar does not have the default voice lines"];
             var turnTypes=["reverse the entire string","swap the 1st letter with the 17th, the second with the 18th, the 3rd with the 15th, the 4th with the 16th, etc","swap the first half with the second half"];
-            var turnCondition=rnd.next(0,4);
+            var turnCondition=rnd.next(0,2);
             var type1=rnd.next(0,3);
             var type2;
             do{
@@ -163,7 +163,7 @@
             </tbody></table>
           <p>One of the bubbles will have one of these messages. Consider that bubble the first of the cycle. Take the color of each bubble as the column of the below table, and the menu number of the background as the row to get three menu buttons.</p>
           <table style="text-align:center"><thead>
-            <tr><th>#</th><th>Code</th><td style="background-color:blue;color:white">B</td><td style="background-color:red;color:white">R</td><td style="background-color:green;color:white">G</td><td style="background-color:yellow;color:black">Y</td><th>#</th><th>Code</th><td style="background-color:blue;color:white">B</td><td style="background-color:red;color:white">R</td><td style="background-color:green;color:white">G</td><td style="background-color:yellow;color:black">Y</td><th>#</th><th>Code</th><td style="background-color:blue;color:white">B</td><td style="background-color:red;color:white">R</td><td style="background-color:green;color:white">G</td><td style="background-color:yellow;color:black">Y</td></tr>
+            <tr><th>#</th><th>Code</th><td style="background-color:blue;color:white">B</td><td style="background-color:green;color:white">G</td><td style="background-color:red;color:white">R</td><td style="background-color:yellow;color:black">Y</td><th>#</th><th>Code</th><td style="background-color:blue;color:white">B</td><td style="background-color:green;color:white">G</td><td style="background-color:red;color:white">R</td><td style="background-color:yellow;color:black">Y</td><th>#</th><th>Code</th><td style="background-color:blue;color:white">B</td><td style="background-color:green;color:white">G</td><td style="background-color:red;color:white">R</td><td style="background-color:yellow;color:black">Y</td></tr>
             </thead>
             <tbody id="first-table">
             <tr><th>1</th><td></td><td></td><td></td><td></td><td></td><th>10</th><td></td><td></td><td></td><td></td><td></td><th>19</th><td></td><td></td><td></td><td></td><td></td></tr>
@@ -190,7 +190,7 @@
           <p>If the serial number contains three unique letters, remove duplicates and numbers and arrange them in alphabetical order. The changes made in position in the serial number from original to alphabetical order should be replicated in the module's three-letter sequence. <b>If this condition is not met, skip this step.</b></p>
           <p>Take the effects of the 3 buttons not in the table from top to bottom, find their menus' codes, and create an 18-letter string. The first button's letters are 1, 2, and 3, the second button's letters are 4, 5, and 6, and the third button's letters are 7, 8, and 9. Take the codes of the background (10, 11, and 12) and Homestar (13, 14, and 15), then convert the number of letters in each bubble message to their alphanumeric positions (16, 17, and 18), and concatenate them all to the string. From there, arrange them in a rectangle as shown in the picture.</p>
           <img src="img/Main Page/Connect_the_dots.png" style="float:left;margin-right:20px;margin-bottom:20px;width:30%"><p>Skew it (left if <span id="colorCondition"></span> in the sequence, right if <span id="colorConditionOpposite"></span>), squish it as demonstrated in the photo, and turn it all around. If <span id="turnCond"></span>, <span id="firstTurnType"></span>. Otherwise, <span id="secondTurnType"></span>. After doing so, go through each letter in the string. If the letter has occurred previously, replace it with the next letter in the alphabet. Replace it more than once and/or loop around if necessary to ensure each letter is unique. Insert this code in reading order into a 13x2 grid, with the remaining 8 letters in alphabetical order occupying the last 8 spots. From here, find the three letters of the message and replace them with the letters below or above them.</p>
-          <p>Finally, shift them forwards in the alphabet via a Caesar cipher using the number of <span id="HSorBG"></span>'s menu of origin.</p>
+          <p>Finally, shift them <u>backwards</u> in the alphabet via a Caesar cipher using the number of <span id="HSorBG"></span>'s menu of origin.</p>
           <p>The resulting string should match up with one of the 27 three-letter codes in the above table. Press the numbered button along the bottom that corresponds to this code to solve the module. A strike will <u>not</u> regenerate the module's elements. Upon solving, the effects will no longer play.</p>
         </div>
         <div class="page-footer relative-footer">2</div>
@@ -201,7 +201,7 @@
           <span class="page-header-section-title">Main Page</span>
         </div>
         <div class="page-content">
-          <h3>Example:</h3>
+          <h3>Example (rule seed 1):</h3>
           <p>Note to self: replace with actual generated example once module development is complete</p>
           <ul>
             <li>Colors: Blue, Red, Yellow</li>
@@ -319,54 +319,5 @@
         </div>
         <div class="page-footer relative-footer">6</div>
       </div>
-      <div class="page page-bg-07">
-        <div class="page-header">
-          <span class="page-header-doc-title">Keep Talking and Nobody Explodes Mod</span>
-          <span class="page-header-section-title">Main Page Notes</span>
-        </div>
-        <div class="page-content">
-          <h3>Notes to self:</h3>
-          <p>Add GIFs of button effects for appendix as well</p>
-          <h4>Encrypting:</h4><ul>
-            <li>Randomly choose number from 1-27 for answer, BG, HS, and 3 colors</li>
-            <li>Get 3-letter code from answer</li>
-            <li>Caesar cipher it <i>backwards</i> w/ Homestar's number</li>
-            <li>Randomly generate effects for 3 buttons not chosen by BG and colors</li>
-            <li>Follow same procedure as expert to make key for 2x13 table</li>
-            <li>Use table in same way as expert to encrypt</li>
-            <li>Check for 3 unique SN letters, and if needed, do inverse of procedure (rearrange encryption to match changes <u>from alphabetized to original order</u>)</li>
-            <li>Determine buttons to assign effects to w/ same procedure as expert</li>
-            <li>Convert letter to number and assign to 3 buttons, ensuring BG/color pattern is followed</li>
-          </ul>
-          <h4>Ruleseed support:</h4><ul>
-          <li>Possible first messages not entirely random, one chosen randomly from each of rows below this list</li>
-          <li>For button table:
-            <ul><li>Each letter should occur 6 times within the range 1-9, 6 times within 10-18, and 6 times within 19-27</li>
-              <li>Also at least once in each column within each range</li>
-              <li>Have alternate codes available for each menu (i.e. for 6: HVN, CLD, HRP) rather than randomly generating letters</li></ul>
-          </li>
-          <li>Change conditions for skew left/right and transformation, also change transformation type (i.e. swap halves, swap within pairs)</li>
-          <li>Maybe use HS number as the table row and BG number as Caesar cipher for some seeds</li>
-          <p>play a game / latest toon / latest merch<br>new strong bad email / new sbemail a-comin' / email soon<br>new toon soon / new cartoon! / hey, a new toon!!<br>more biz cas fri / biz cas fri / new biz cas fri!<br>short shorts! / new short shortly / new short!</p>
-          </ul>
-        </div>
-        <div class="page-footer relative-footer">7</div>
-      </div>
-      <div class="page page-bg-08">
-        <div class="page-header">
-          <span class="page-header-doc-title">Keep Talking and Nobody Explodes Mod</span>
-          <span class="page-header-section-title">Main Page Notes</span>
-        </div>
-        <div class="page-content">
-          <h4>Twitch Plays:</h4><ul>
-            <li>Help message: "!{0} cycle to view all effects, !# t/g/c/d/s/e to view specific buttons' effects (can be stringed together with no spaces), and !{0} (number) to press a number button."</li></ul>
-          <h4>Souvenir support:</h4><ul>
-              <li>"What menu was the background/Homestar from?"</li>
-              <li>"What menu was the 'Toons/Games/Characters/Downloads/Store/E-mail button's effect from?"</li>
-              <li>Answers written as: "1. The Moon", "16. Wintertime", "23. Rear-view", etc.</li>
-          </ul>
-        </div>
-        <div class="page-footer relative-footer">8</div>
-    </div>
   </body>
 </html>
