--- a/Manual/HTML/Sbemail Songs.html
+++ b/Manual/HTML/Sbemail Songs.html
@@ -9,12 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/font.css">
     <style>
-        table thead.concept1table tr th{
-            border-top-style:hidden;
-            border-left-style:hidden;
-            border-right-style:hidden;
-        }
-        table.concept2table{
+        table{
             float:left;
             clear:left;
             margin-right:10px;
@@ -23,70 +18,115 @@
         }
     </style>
     <script src="js/ktane-utils.js"></script>
+    <script src="js/ruleseed.js"></script>
+    <script src="js/jquery.3.7.0.min.js"></script>
+    <script>
+        function setDefaultRules(rnd){
+            setRules(rnd);
+        }
+        function setRules(rnd){
+            var buttonOrders=
+            [
+                "56781234",
+                "21436587",
+                "56341278",
+                "12785634",
+                "87654321",
+                "12563478",
+                "78123456",
+                "45612378"
+            ];
+            var boolTypes=
+            [
+                "AND",
+                "OR",
+                "XOR",
+                "NAND",
+                "NOR",
+                "XNOR"
+            ];
+            var operations=
+            [
+                "Add",
+                "Subtract",
+                "Multiply by",
+                "Modulo"
+            ];
+            var conditions=
+            [
+                "Previous digit<br>was from",
+                "Stage<br>divisible by",
+                "Majority of<br>sequence is",
+                "Digit at this<br>point is"
+            ];
+            var hexDigits="0123456789ABCDEF";
+            rnd.shuffleFisherYates(buttonOrders);
+            for(var i=0;i<5;i++)
+                $(`#buttonOrder${i}`).text(buttonOrders[i]);
+            rnd.shuffleFisherYates(boolTypes);
+            for(var i=0;i<6;i++)
+                $(`#boolType${i}`).text(boolTypes[i]);
+            rnd.shuffleFisherYates(conditions);
+            var rangeLower=hexDigits.charAt(rnd.next(0,8));
+            var rangeUpper=hexDigits.charAt(rnd.next(8,16));
+            var parity1=rnd.next(0,2)===0?"even":"odd";
+            var parity2=rnd.next(0,2)===0?"even":"odd";
+            var divisible=rnd.next(2,4);
+            for(var i=0;i<4;i++){
+                $(`#condition${i}`).html(conditions[i]);
+                switch(conditions[i]){
+                    case "Previous digit<br>was from":
+                        $(`#then${i}`).html(rangeLower+" to "+rangeUpper+"<br>inclusive");
+                        break;
+                    case "Stage<br>divisible by":
+                        $(`#then${i}`).text(divisible);
+                        break;
+                    case "Majority of<br>sequence is":
+                        $(`#then${i}`).text(parity1);
+                        break;
+                    case "Digit at this<br>point is":
+                        $(`#then${i}`).text(parity2);
+                        break;
+                }
+            }
+            rnd.shuffleFisherYates(operations);
+            for(var i=0;i<4;i++)
+                $(`#operation${i}`).text(operations[i]+" "+hexDigits.charAt(rnd.next(0,16)));
+        }
+    </script>
 </head>
 <body>
     <div class="section">
         <div class="page page-bg-01">
             <div class="page-header">
                 <span class="page-header-doc-title">Keep Talking and Nobody Explodes Mod</span>
-                <span class="page-header-section-title">Sbemail Songs — Concept 1</span>
-            </div>
-            <div class="page-content">
-                <img src="img/Component/Sbemail Songs 1.svg" class="diagram">
-                <h2>On the Subject of Sbemail Songs</h2>
-                <p class="flavour-text">Where would I be without my Sbemail Songs?</p>
-                <table style="float:left;margin-right:10px;margin-bottom:20px"><tbody>
-                    <tr><td>Tandy 400</td><td>XOR</td></tr>
-                    <tr><td>Compy 386</td><td>OR</td></tr>
-                    <tr><td>Lappy 486</td><td>AND</td></tr>
-                    <tr><td>Corpy NT6</td><td>XNOR</td></tr>
-                    <tr><td>Compé</td><td>NOR</td></tr>
-                    <tr><td>Lappier</td><td>NAND</td></tr>
-                </tbody></table>
-                <div style="font-size:10pt"><p>This module will have a computer-like background. There are four buttons labeled song 1-4, a small screen under each displaying a digit in hexadecimal accompanied by two arrows, and a button labeled "submit".</p>
-                <p>When clicked, each of the song buttons will play a short audio clip called a "sbemail song" that has a number associated with it. See <a href="http://hrwiki.org/wiki/Strong_Bad_Email_Intros">here</a> for a full list of sbemail song transcriptions. <b>NOTE: In the case of more than one of the same number, such as 122a/122b or 193/193½ where the transcriptions are completely different, only the first of each can appear on the module.</b></p>
-                <p>Take the number associated with each sbemail song and convert it to binary, with zeros added to the left to make it 8 bits long if needed. Concatenate these to get a 32-bit string, and perform the operation associated with the background on each pair of bits (use the table above and to the left for reference). Arrange the resulting 16 bits into a 4x4 grid in reading order to get the initial grid.</p>
-                <table style="text-align:center;font-size:11pt"><thead class="concept1table"><tr><th>There are at least:</th><th>The serial number contains:</th><th>The module contains:</th><th>The initial grid contains:</th></tr></thead><tbody>
-                    <tr><td>2 lit indicators</td><td>Any vowels</td><td>A prime-numbered sbemail song</td><td>A 0 in the top-left corner</td></tr>
-                    <tr><td>5 modules</td><td>More numbers than letters</td><td>A sbemail song from the Compy era (41-118)</td><td>Two 1s horizontally adjacent to each other</td></tr>
-                    <tr><td>3 battery holders</td><td>Any letter in "SBEMAIL"</td><td>A sbemail song without the words "email" or "sbemail"</td><td>Five or more 1s</td></tr>
-                    <tr><td>3 different port types</td><td>Digits that add up to 15 or more</td><td>Two sbemail song numbers that both end in the same digit</td><td>A row or column with two of each digit</td></tr>
-                </tbody></table>
-                <p>Using the table above, create another 4x4 grid of bits, placing a 1 in every true condition's spot and a 0 in every false condition's spot. Then overlay the two tables, applying the same operation as before to get a final 4x4 grid.</p>
-                <p>Take the numbers of each quadrant of the final grid in reading order, concatenate them, and convert them to a hexadecimal digit. Change each display to the resulting number and then submit.</p></div>
-            </div>
-            <div class="page-footer relative-footer">Page 1 of 1</div>
-        </div>
-        <div class="page page-bg-01">
-            <div class="page-header">
-                <span class="page-header-doc-title">Keep Talking and Nobody Explodes Mod</span>
-                <span class="page-header-section-title">Sbemail Songs — Concept 2</span>
+                <span class="page-header-section-title">Sbemail Songs</span>
             </div>
             <div class="page-content">
                 <img src="img/Component/Sbemail Songs 2.svg" class="diagram">
                 <h2>On the Subject of Sbemail Songs</h2>
                 <p class="flavour-text">Where would I be without my Sbemail Songs?</p>
-                    <table class="concept2table"><tbody>
-                        <tr><th>Wire</th><td>56781234</td></tr>
-                        <tr><th>Maze</th><td>21436587</td></tr>
-                        <tr><th>Simon</th><td>56341278</td></tr>
-                        <tr><th>Morse</th><td>12785634</td></tr>
-                        <tr><th>Button</th><td>87654321</td></tr>
-                        <tr><th>Other</th><td>12345678</td></tr>
+                    <table><tbody>
+                        <tr><th>Wire</th><td id="buttonOrder0"></td></tr>
+                        <tr><th>Maze</th><td id="buttonOrder1"></td></tr>
+                        <tr><th>Simon</th><td id="buttonOrder2"></td></tr>
+                        <tr><th>Morse</th><td id="buttonOrder3"></td></tr>
+                        <tr><th>Button</th><td id="buttonOrder4"></td></tr>
+                        <tr><th>(none)</th><td>12345678</td></tr>
                     </tbody></table>
-                    <table class="concept2table"><tbody>
-                        <tr><th>0-40</th><td>AND</td></tr>
-                        <tr><th>41-118</th><td>OR</td></tr>
-                        <tr><th>119-209</th><td>XOR</td></tr>
-                        <tr><th>209-220</th><td>NAND</td></tr>
-                        <tr><th>220-240</th><td>NOR</td></tr>
-                        <tr><th>240-255</th><td>XNOR</td></tr>
+                    <table><tbody>
+                        <tr><th>0-40</th><td id="boolType0"></td></tr>
+                        <tr><th>41-118</th><td id="boolType1"></td></tr>
+                        <tr><th>119-209</th><td id="boolType2"></td></tr>
+                        <tr><th>209-220</th><td id="boolType3"></td></tr>
+                        <tr><th>220-240</th><td id="boolType4"></td></tr>
+                        <tr><th>240-255</th><td id="boolType5"></td></tr>
                     </tbody></table>
-                    <table class="concept2table"><tbody>
-                        <tr><th>Previous<br>digit was A-F</th><td>Add 5</td></tr>
-                        <tr><th>Stage<br>divisible by 6</th><td>Subtract 2</td></tr>
-                        <tr><th>Majority of<br>sequence is<br>even</th><td>Modulo 12</td></tr>
-                        <tr><th>Digit at this<br>point is odd</th><td>Multiply by 3</td></tr>
+                    <table><tbody>
+                        <tr><th><span id="condition0"></span> <span id="then0"></span></th><td id="operation0"></td></tr>
+                        <tr><th><span id="condition1"></span> <span id="then1"></span></th><td id="operation1"></td></tr>
+                        <tr><th><span id="condition2"></span> <span id="then2"></span></th><td id="operation2"></td></tr>
+                        <tr><th><span id="condition3"></span> <span id="then3"></span></th><td id="operation3"></td></tr>
                         <tr><th>No changes<br>have been made</th><td>Change digit to<br>10<sub>hex</sub> minus<br>digit</td></tr>
                     </tbody></table>
                 <div style="font-size:11.5pt"><p>On this module will be a stage display in hexadecimal, a larger rectangular display below, a play button and a 4x4 grid of hexadecimal digits. Pressing the play button will play a short audio clip called a "sbemail song" that has a number associated with it. Every time a <a href="https://ktane.timwi.de/More/Ignore%20Table.html#mod=sbemailsongs">non-ignored module</a> is solved, this module will change which sbemail song is played.</p>
