Make more progress w/ to-do list

--- a/Manual/HTML/Sbemail Songs.html
+++ b/Manual/HTML/Sbemail Songs.html
@@ -103,7 +103,7 @@
                 <span class="page-header-section-title">Sbemail Songs</span>
             </div>
             <div class="page-content">
-                <img src="img/Component/Sbemail Songs 2.svg" class="diagram">
+                <img src="img/Component/Sbemail Songs.svg" class="diagram">
                 <h2>On the Subject of Sbemail Songs</h2>
                 <p class="flavour-text">Where would I be without my Sbemail Songs?</p>
                     <table><tbody>
