--- a/Manual/HTML/Main Page.html
+++ b/Manual/HTML/Main Page.html
@@ -161,7 +161,7 @@
                 <tr><td></td></tr>
                 <tr><td></td></tr>
             </tbody></table>
-          <p>One of the bubbles will have one of these messages. Consider that bubble the first of the cycle. Take the color of each bubble as the column of the below table, and the menu number of the background as the row to get three menu buttons.</p>
+          <p>One of the bubbles will have one of these messages. Consider that bubble the first of the cycle. Take the color of each bubble as the column of the below table, and the main page number of the background as the row to get three main page buttons.</p>
           <table style="text-align:center"><thead>
             <tr><th>#</th><th>Code</th><td style="background-color:blue;color:white">B</td><td style="background-color:green;color:white">G</td><td style="background-color:red;color:white">R</td><td style="background-color:yellow;color:black">Y</td><th>#</th><th>Code</th><td style="background-color:blue;color:white">B</td><td style="background-color:green;color:white">G</td><td style="background-color:red;color:white">R</td><td style="background-color:yellow;color:black">Y</td><th>#</th><th>Code</th><td style="background-color:blue;color:white">B</td><td style="background-color:green;color:white">G</td><td style="background-color:red;color:white">R</td><td style="background-color:yellow;color:black">Y</td></tr>
             </thead>
@@ -176,7 +176,7 @@
             <tr><th>8</th><td></td><td></td><td></td><td></td><td></td><th>17</th><td></td><td></td><td></td><td></td><td></td><th>26</th><td></td><td></td><td></td><td></td><td></td></tr>
             <tr><th>9</th><td></td><td></td><td></td><td></td><td></td><th>18</th><td></td><td></td><td></td><td></td><td></td><th>27</th><td></td><td></td><td></td><td></td><td></td></tr>
             </tbody></table>
-          <p>The letters represent '<b>T</b>oons, <b>G</b>ames, <b>C</b>haracters, <b>D</b>ownloads, <b>S</b>tore, and <b>E</b>-mail. Take the buttons in the order of the bubble's colors, and convert their effects' menu numbers to their alphanumeric positions (1=A, 2=B, etc.; An effect from menu 27 is not used).</p>
+          <p>The letters represent '<b>T</b>oons, <b>G</b>ames, <b>C</b>haracters, <b>D</b>ownloads, <b>S</b>tore, and <b>E</b>-mail. Take the buttons in the order of the bubble's colors, and convert their effects' main page numbers to their alphanumeric positions (1=A, 2=B, etc.; An effect from main page 27 is not used).</p>
         </div>
         <div class="page-footer relative-footer">1</div>
       </div>
@@ -188,9 +188,9 @@
         <div class="page-content">
           <h3>Decryption</h3>
           <p>If the serial number contains three unique letters, remove duplicates and numbers and arrange them in alphabetical order. The changes made in position in the serial number from original to alphabetical order should be replicated in the module's three-letter sequence. <b>If this condition is not met, skip this step.</b></p>
-          <p>Take the effects of the 3 buttons not in the table from top to bottom, find their menus' codes, and create an 18-letter string. The first button's letters are 1, 2, and 3, the second button's letters are 4, 5, and 6, and the third button's letters are 7, 8, and 9. Take the codes of the background (10, 11, and 12) and Homestar (13, 14, and 15), then convert the number of letters in each bubble message to their alphanumeric positions (16, 17, and 18), and concatenate them all to the string. From there, arrange them in a rectangle as shown in the picture.</p>
+          <p>Take the effects of the 3 buttons not in the table from top to bottom, find their main pages' codes, and create an 18-letter string. The first button's letters are 1, 2, and 3, the second button's letters are 4, 5, and 6, and the third button's letters are 7, 8, and 9. Take the codes of the background (10, 11, and 12) and Homestar (13, 14, and 15), then convert the number of letters in each bubble message to their alphanumeric positions (16, 17, and 18), and concatenate them all to the string. From there, arrange them in a rectangle as shown in the picture.</p>
           <img src="img/Main Page/Connect_the_dots.png" style="float:left;margin-right:20px;margin-bottom:20px;width:30%"><p>Skew it (left if <span id="colorCondition"></span> in the sequence, right if <span id="colorConditionOpposite"></span>), squish it as demonstrated in the photo, and turn it all around. If <span id="turnCond"></span>, <span id="firstTurnType"></span>. Otherwise, <span id="secondTurnType"></span>. After doing so, go through each letter in the string. If the letter has occurred previously, replace it with the next letter in the alphabet. Replace it more than once and/or loop around if necessary to ensure each letter is unique. Insert this code in reading order into a 13x2 grid, with the remaining 8 letters in alphabetical order occupying the last 8 spots. From here, find the three letters of the message and replace them with the letters below or above them.</p>
-          <p>Finally, shift them <u>backwards</u> in the alphabet via a Caesar cipher using the number of <span id="HSorBG"></span>'s menu of origin.</p>
+          <p>Finally, shift them <u>backwards</u> in the alphabet via a Caesar cipher using the number of <span id="HSorBG"></span>'s main page of origin.</p>
           <p>The resulting string should match up with one of the 27 three-letter codes in the above table. Press the numbered button along the bottom that corresponds to this code to solve the module. A strike will <u>not</u> regenerate the module's elements. Upon solving, the effects will no longer play.</p>
         </div>
         <div class="page-footer relative-footer">2</div>
@@ -233,7 +233,7 @@
           <ul>
             <li>After translation: PZO</li>
             <li>Shift forwards by 8: HRG</li>
-            <li>Answer: Menu ##</li>
+            <li>Answer: Main Page ##</li>
           </ul>
         </div>
         <div class="page-footer relative-footer">3</div>
@@ -275,7 +275,7 @@
           <table><tbody>
             <tr>
               <td><b>10.</b><br><img src="img/Main Page/10.png" width=209px><br>BG: Old-Timey<br>HS: Black and white<br>FX: Black-and-white character w/ mustache dances</td>
-              <td><b>11.</b><br><img src="img/Main Page/11.png" width=209px><br>BG: News Report<br>HS: Suit and Tie<br>FX: Various blocks w/ pictures and text</td>
+              <td><b>11.</b><br><img src="img/Main Page/11.png" width=209px><br>BG: News Report<br>HS: Suit and Tie<br>FX: Block that displays a picture w/ text</td>
               <td><b>12.</b><br><img src="img/Main Page/12.png" width=209px><br>BG: Night, Black Hills<br>HS: Facing away, wearing America-themed top hat<br>FX: Multicolored firework</td>
             </tr>
             <tr>
@@ -308,10 +308,10 @@
             <tr>
               <td><b>22.</b><br><img src="img/Main Page/22.png" width=209px><br>BG: Broken Computer<br>HS: Normal head, old-timey body<br>FX: Multiple popups appear</td>
               <td><b>23.</b><br><img src="img/Main Page/23.png" width=209px><br>BG: Rear-View<br>HS: Normal, facing away<br>FX: Wooden circle reading "wear a bikini!" floats across, tape plays "I'm the floating head of doom!"</td>
-              <td><b>24.</b><br><img src="img/Main Page/24.png" width=209px><br>BG: Generic 1<br>HS: Blurred shirt (not shown in image)<br>FX: Eyesight chart appears</td>
+              <td><b>24.</b><br><img src="img/Main Page/24.png" width=209px><br>BG: Generic (has text saying "24" on module)<br>HS: Blurred shirt (not shown in image)<br>FX: Eyesight chart appears</td>
             </tr>
             <tr>
-              <td><b>25.</b><br><img src="img/Main Page/25.png" width=209px><br>BG: Generic 2<br>HS: Puppet<br>FX: Yellow character walks by holding blue boombox playing music</td>
+              <td><b>25.</b><br><img src="img/Main Page/25.png" width=209px><br>BG: Generic (has text saying "25" on module)<br>HS: Puppet<br>FX: Yellow character walks by holding blue boombox playing music</td>
               <td><b>26.</b><br><img src="img/Main Page/26.png" width=209px><br>BG: Bright, Spiked<br>HS: Pointy, angry<br>FX: Angry elephant flies by, exclaiming "I'm mad that I'm flying!"</td>
               <td><b>27.</b><br><img src="img/Main Page/27.png" width=209px><br>BG: Mountains, Cottage<br>HS: Hooded<br>FX: None</td>
             </tr>
